# mpf

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG-ZH.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  MINE.md  README-ZH.md  README.md  SECURITY.md  TODO.md
.github/: dependabot.yml
.github/workflows/: README.md  build-and-test.yml  ci.yml  code-quality.yml  compatibility.yml  coverage.yml  memory-safety.yml  performance-regression.yml  performance.yml  platform-compatibility.yml  portability.yml  quality.yml  release-candidate.yml  release.yml  sanitizers.yml  security-analysis.yml  security.yml  test-coverage.yml  validation.yml
.github/workflows-disabled/: README.md  compatibility.yml
cmake/: mpf-config.cmake.in  verify_coverage.cmake  verify_format.cmake  verify_performance.cmake  verify_release_archive.cmake  verify_release_version.cmake  write_sha256.cmake
docs/: ARCHITECTURE.md  COMPILER_PIPELINE.md  CONTRIBUTING.md  DIAGNOSTICS.md  EXTENDING.md  LANGUAGE_SUPPORT.md  MATLAB_TO_JAVASCRIPT.md  TESTING.md  VERSIONING.md
docs/schemas/: diagnostics-v1.schema.json
examples/embedding/: CMakeLists.txt  main.cpp
examples/fortran/: argument_association.f90  array_reference_arguments.f90  arrays.f90  assignments.f90  basic.f90  control_flow.f90  disjoint_regions.f90  fixed_form.f  loops.f90  matrices.f90  optional_writeback.f90  procedures.f90  reference_arguments.f90  section_reference_arguments.f90  sections.f90  select_case.f90  source_forms.f90  statement_tokens.f90  tensors.f90
examples/installed/backend/: CMakeLists.txt  main.cpp
examples/installed/frontend/: CMakeLists.txt  main.cpp
examples/matlab/: advanced_structured_square_solve.m  arrays.m  assignments.m  basic.m  command_syntax.m  complex_dense_pivot_solve.m  complex_matrix_operations.m  complex_nearly_singular_square_warning.m  complex_numbers.m  complex_rank_deficient_solve.m  complex_rectangular_solve.m  complex_singular_square_warning.m  complex_sparse_arithmetic.m  complex_sparse_matrix_product.m  complex_sparse_storage.m  control_flow.m  dynamic_broadcast.m  dynamic_end.m  empty_arrays.m  end_indexing.m  function_graph.m  generalized_indexing.m  implicit_expansion.m  logical_comparisons.m  logical_indexing.m  logical_lines.m  logical_reduction.m  logical_semantics.m  logical_sparse.m  loops.m  matrices.m  matrix_solve.m  multi_output.m  nearly_singular_cholesky_warning.m  nearly_singular_square_solve.m  operators.m  rank_deficient_solve.m  rectangular_solve.m  return_command.m  sections.m  (+24 more)
examples/python/: arrays.py  assignments.py  basic.py  comparisons.py  control_flow.py  expression_semantics.py  function_graph.py  globals.py  logical_lines.py  loops.py  matrices.py  names.py  nested_loops.py  (+9 more)
tests/: CMakeLists.txt  test_framework.hpp  test_main.cpp
tests/cmake/: verify_backend_isolation.cmake  verify_cli_contract.cmake  verify_compiler_layers.cmake  verify_differential.cmake  verify_generated_cpp_compile.cmake  verify_generated_runtime_failure.cmake  verify_installed_examples.cmake  verify_release_support.cmake  verify_staged_package.cmake
tests/consumers/backend_configuration/: CMakeLists.txt  main.cpp
tests/differential/: README.md  corpus.cmake
tests/fixtures/: diagnostic_error.py  matlab_complex_matrix_invalid_exponent.m  matlab_complex_sparse_arithmetic_overflow.m  matlab_complex_sparse_arithmetic_plan.m  matlab_complex_sparse_duplicate_nonfinite.m  matlab_complex_sparse_product_overflow.m  matlab_complex_sparse_product_plan.m  matlab_dynamic_broadcast_mismatch.m  matlab_dynamic_linear_delete_matrix.m  matlab_dynamic_logical_mismatch.m  matlab_ieee_division.m  matlab_logical_sparse_plan.m  matlab_rank_deficient.m  matlab_singular_square.m  matlab_sparse_arithmetic_nonfinite.m  matlab_sparse_arithmetic_overflow.m  matlab_sparse_arithmetic_plan.m  matlab_sparse_assignment_nonfinite.m  matlab_sparse_elementwise_nonfinite.m  matlab_sparse_elementwise_overflow.m  matlab_sparse_elementwise_plan.m  matlab_sparse_index_out_of_bounds.m  matlab_sparse_logical_plan.m  matlab_sparse_power_invalid_exponent.m  matlab_sparse_power_overflow.m  matlab_sparse_power_plan.m  matlab_sparse_product_plan.m  matlab_sparse_reduction_plan.m  matlab_sparse_reshape_plan.m  matlab_sparse_scalar_nonfinite.m  matlab_sparse_scalar_overflow.m  matlab_sparse_triplet_out_of_bounds.m  matlab_sparse_zero_solve_plan.m  python_floor_division_by_zero.py
tests/fuzz/: README.md  fuzz_smoke.cpp  transpiler_fuzzer.cpp
tests/fuzz/corpus/fortran/: basic  disjoint_regions
tests/fuzz/corpus/matlab/: advanced_structured_condition_warnings  advanced_structured_square_solve  array_operators  basic  command_syntax  complex_matrix_operations  complex_numbers  complex_rectangular_solve  complex_sparse_arithmetic  complex_sparse_matrix_product  complex_sparse_storage  conditioned_square_solve  dynamic_broadcast  dynamic_end  empty_arrays  end_indexing  generalized_indexing  implicit_expansion  logical_indexing  logical_reduction  logical_semantics  logical_sparse  matrix_solve  rank_aware_solve  rectangular_solve  return_command  shape_mutation  sparse_arithmetic  sparse_assignment  sparse_construction_transpose  sparse_elementwise_product  sparse_indexing  sparse_logical_operators  sparse_logical_reduction  sparse_matrix_power  sparse_matrix_product  sparse_reshape  sparse_scalar_product  sparse_square_solve  sparse_zero_extent  (+4 more)
tests/fuzz/corpus/python/: basic  comparisons  memory_dependence  memory_regions
tests/fuzz/corpus/typescript/: basic  block_scopes  for_loop
tests/golden/hir/: scalar_assignment.hir
tests/golden/lir/: cpp-basic.lir  javascript-basic.lir
tests/integration/: array_tests.cpp  control_flow_tests.cpp  language_tests.cpp
tests/performance/: baseline.json  benchmark.cpp
tests/unit/: api_tests.cpp  compiler_foundation_tests.cpp  extension_architecture_tests.cpp  multilevel_ir_tests.cpp  reduction_contract_tests.cpp  semantic_tests.cpp  sparse_arithmetic_lir_tests.cpp  sparse_logical_lir_tests.cpp  sparse_power_lir_tests.cpp  sparse_reduction_lir_tests.cpp
(+307 files in other folders)
